--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,18 +32,18 @@
               <picture>
                 <source
                   media="(min-width: 1150px)"
-                  srcset="img/icons/header/logo-mishka-desktop.svg"
+                  srcset="img/icons/logo-mishka-desktop.svg"
                   width="149"
                   height="72"
                 />
                 <source
                   media="(min-width: 768px)"
-                  srcset="img/icons/header/logo-mishka-tablet.svg"
+                  srcset="img/icons/logo-mishka-tablet.svg"
                   width="113"
                   height="46"
                 />
                 <img
-                  src="img/icons/header/logo-mishka-mobile.svg"
+                  src="img/icons/logo-mishka-mobile.svg"
                   width="86"
                   height="35"
                   alt="Логотип сайта 'Мишка'."
@@ -71,7 +71,7 @@
               <li class="header__user-nav-item">
                 <a
                   class="header__user-nav-link header__user-nav-link--find-icon"
-                  href="#"
+                  href="#" aria-label="Поиск по сайту."
                 >
                   <svg
                     aria-hidden="true"
@@ -125,12 +125,12 @@
     <main>
       <section class="intro">
         <div class="intro__wrapper">
-          <h2 class="intro__tittle">Каталог товаров</h2>
+          <h1 class="intro__tittle">Каталог товаров</h1>
         </div>
       </section>
       <section class="catalog">
         <ul class="catalog__list">
-          <li class="catalog__item">
+          <li class="catalog__item catalog-item">
             <a class="catalog-item__link" href="#">
               <picture>
                 <source
@@ -182,7 +182,7 @@
                   height="334"
                 />
                 <img
-                  class="catalog__item-image"
+                  class="catalog-item__link-image"
                   src="img/content/product/product-bunny-mobile@1x.jpg"
                   srcset="img/content/product/product-bunny-mobile@2x.jpg 2x"
                   width="260"
@@ -200,7 +200,7 @@
               </div>
               <div class="catalog-item__footer">
                 <span class="catalog-item__price">1 200 руб.</span>
-                <a class="catalog-item__button modal__button" href="#">
+                <a class="catalog-item__button modal-button" href="#">
                   <span class="visually-hidden">Добавить в корзину.</span>
                   <svg
                     aria-hidden="true"
@@ -217,7 +217,7 @@
               </div>
             </div>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item catalog-item">
             <a class="catalog-item__link" href="#">
               <picture>
                 <source
@@ -270,7 +270,7 @@
                   height="334"
                 />
                 <img
-                  class="catalog__item-image"
+                  class="catalog-item__link-image"
                   src="img/content/product/product-basket-mobile@1x.jpg"
                   srcset="img/content/product/product-basket-mobile@2x.jpg 2x"
                   width="260"
@@ -290,7 +290,7 @@
               </div>
               <div class="catalog-item__footer">
                 <span class="catalog-item__price">690 руб.</span>
-                <a class="catalog-item__button modal__button" href="#">
+                <a class="catalog-item__button modal-button" href="#">
                   <span class="visually-hidden">Добавить в корзину.</span>
                   <svg
                     aria-hidden="true"
@@ -307,7 +307,7 @@
               </div>
             </div>
           </li>
-          <li class="catalog__item">
+          <li class="catalog__item catalog-item">
             <a class="catalog-item__link" href="#">
               <picture>
                 <source
@@ -360,7 +360,7 @@
                   height="334"
                 />
                 <img
-                  class="catalog__item-image"
+                  class="catalog-item__link-image"
                   src="img/content/product/product-big-basket-mobile@1x.jpg"
                   srcset="
                     img/content/product/product-big-basket-mobile@2x.jpg 2x
@@ -384,7 +384,7 @@
               </div>
               <div class="catalog-item__footer catalog-item__footer--big">
                 <span class="catalog-item__price">1500 руб.</span>
-                <a class="catalog-item__button modal__button" href="#">
+                <a class="catalog-item__button modal-button" href="#">
                   <span class="visually-hidden">Добавить в корзину.</span>
                   <svg
                     aria-hidden="true"
@@ -468,14 +468,16 @@
                 alt="Вязаные корзинки."
               />
             </picture>
-            <button class="manufacturing__player-button"></button>
+            <button class="manufacturing__player-button" type="button">
+              <span class="visually-hidden">Запустить видео.</span>
+            </button>
           </div>
           <div class="manufacturing__order">
             <p class="manufacturing__descriprion">
               По просьбам наших любимых фолловеров мы сняли для вас подробное
               видео о том, как появляются наши товары.
             </p>
-            <a class="manufacturing__button modal__button button" href="#">
+            <a class="manufacturing__button modal-button button" href="#">
               Сделать заказ
             </a>
           </div>
