--- a/source/form.html
+++ b/source/form.html
@@ -32,18 +32,18 @@
               <picture>
                 <source
                   media="(min-width: 1150px)"
-                  srcset="img/icons/header/logo-mishka-desktop.svg"
+                  srcset="img/icons/logo-mishka-desktop.svg"
                   width="149"
                   height="72"
                 />
                 <source
                   media="(min-width: 768px)"
-                  srcset="img/icons/header/logo-mishka-tablet.svg"
+                  srcset="img/icons/logo-mishka-tablet.svg"
                   width="113"
                   height="46"
                 />
                 <img
-                  src="img/icons/header/logo-mishka-mobile.svg"
+                  src="img/icons/logo-mishka-mobile.svg"
                   width="86"
                   height="35"
                   alt="Логотип сайта 'Мишка'."
@@ -71,7 +71,7 @@
               <li class="header__user-nav-item">
                 <a
                   class="header__user-nav-link header__user-nav-link--find-icon"
-                  href="#"
+                  href="#" aria-label="Поиск по сайту."
                 >
                   <svg
                     aria-hidden="true"
@@ -126,7 +126,7 @@
     <main>
       <section class="intro">
         <div class="intro__wrapper">
-          <h2 class="intro__tittle">Вязание на заказ</h2>
+          <h1 class="intro__tittle">Вязание на заказ</h1>
         </div>
       </section>
       <section class="form">
